--- a/deploy/cluster/backend/statf-pdf.yml
+++ b/deploy/cluster/backend/statf-pdf.yml
@@ -30,8 +30,8 @@ spec:
         volumeMounts:
         - name: backend
           mountPath: /app
-        securityContext:
-          runAsNonRoot: true
+        #securityContext:
+         # runAsNonRoot: true
         resources:
           limits:
             memory: "128Mi"
