--- a/deploy/blue-green/backend-preview-svc.yml
+++ b/deploy/blue-green/backend-preview-svc.yml
@@ -3,6 +3,8 @@ kind: Service
 metadata:
   name: backend-preview
   namespace: pdf-editor-ns
+  annotations:
+    blue-green: 'true'
 spec:
   selector:
     app: backend-main
