--- a/deploy/canary/frontend-preview-svc.yml
+++ b/deploy/canary/frontend-preview-svc.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: frontend-lb-preview
+  name: frontend-lb-canary
   namespace: pdf-editor-ns
   annotations:
     blue-green: 'true'
@@ -9,6 +9,6 @@ spec:
   selector:
     app: frontend-pdf
   ports:
-  - port: 5001
+  - port: 80
     targetPort: web-port
     protocol: TCP
