--- a/deploy/canary/deploy.yml
+++ b/deploy/canary/deploy.yml
@@ -95,77 +95,81 @@ spec:
 
 
 # Canary is not good for API Testing (I guess)
-# ---
+---
 
-# apiVersion: v1
-# kind: PersistentVolumeClaim
-# metadata:
-#   name: pdf-editor-pvc
-#   labels:
-#     pvc: pdf
-#   namespace: pdf-editor-ns
-# spec:
-#   accessModes:
-#     - ReadWriteOnce
-#   storageClassName: standard
-#   resources:
-#     requests:
-#       storage: 50Mi
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: pdf-editor-pvc
+  labels:
+    pvc: pdf
+  namespace: pdf-editor-ns
+spec:
+  accessModes:
+    - ReadWriteOnce
+  storageClassName: standard
+  resources:
+    requests:
+      storage: 50Mi
 
-# ---
+---
 
-# apiVersion: argoproj.io/v1alpha1
-# kind: Rollout
-# metadata:
-#   name: pdf-editor-backend
-#   namespace: pdf-editor-ns
-#   labels:
-#     app: pdf
-#     backend: main
-# spec:
-#   replicas: 2
-#   minReadySeconds: 30
-#   revisionHistoryLimit: 3
-#   strategy:
-#     canary: #Indicates that the rollout should use the Canary strategy
-#       maxSurge: "25%"
-#       maxUnavailable: 0
-#       steps:
-#       - setWeight: 10
-#       - pause:
-#           duration: 1m
-#       - setWeight: 20
-#       - pause: {} # pause indefinitely
-#   selector:
-#     matchLabels:
-#       app: backend-main
-#   template:
-#     metadata:
-#       labels:
-#         app: backend-main
-#     spec:
-#       containers:
-#       - name: backend
-#         image: docker.io/dipugodocker/pdf-editor:0.6-backend
-#         ports:
-#         - containerPort: 8080
-#           name: backend-port
-#         livenessProbe:
-#           httpGet:
-#             port: 8080
-#             path: /greet
-#         imagePullPolicy: Always
-#         volumeMounts:
-#         - name: backend
-#           mountPath: /app
-#         resources:
-#           limits:
-#             memory: "128Mi"
-#             cpu: "500m"
-#           requests:
-#             memory: "50Mi"
-#             cpu: "10m"
-#       volumes:
-#       - name: backend
-#         persistentVolumeClaim:
-#           claimName: pdf-editor-pvc
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: pdf-editor-backend
+  namespace: pdf-editor-ns
+  labels:
+    app: pdf
+    backend: main
+spec:
+  replicas: 2
+  selector:
+    matchLabels:
+      app: backend-main
+  template:
+    metadata:
+      labels:
+        app: backend-main
+    spec:
+      containers:
+      - name: backend
+        image: docker.io/dipugodocker/pdf-editor:0.6-backend
+        ports:
+        - containerPort: 8080
+          name: backend-port
+        livenessProbe:
+          httpGet:
+            port: 8080
+            path: /greet
+        imagePullPolicy: Always
+        volumeMounts:
+        - name: backend
+          mountPath: /app
+        resources:
+          limits:
+            memory: "128Mi"
+            cpu: "500m"
+          requests:
+            memory: "50Mi"
+            cpu: "10m"
+      volumes:
+      - name: backend
+        persistentVolumeClaim:
+          claimName: pdf-editor-pvc
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: backend
+  namespace: pdf-editor-ns
+spec:
+  selector:
+    app: backend-main
+  ports:
+  - port: 8080
+    targetPort: backend-port
+    protocol: TCP
+
+---
