--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   backend:
-    image: docker.io/dipugodocker/pdf-editor:backend
+    image: docker.io/dipugodocker/pdf-editor:0.7-backend
     container_name: backend
     ports:
       - "8080"
@@ -13,7 +13,7 @@ services:
   frontend:
     depends_on:
       - backend
-    image: docker.io/dipugodocker/pdf-editor:frontend
+    image: docker.io/dipugodocker/pdf-editor:0.7-frontend
     container_name: frontend
     ports:
       - "80:80"
