--- a/.github/workflows/argoCD.yaml
+++ b/.github/workflows/argoCD.yaml
@@ -5,9 +5,9 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-    
+
 env:
-  DATREE_TOKEN: ${{ secrets.DATREE_TOKEN }} 
+  DATREE_TOKEN: ${{ secrets.DATREE_TOKEN }}
 
 jobs:
   ArgoCDPolicyCheck:
@@ -16,11 +16,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-        
+
       - name: Run Datree Policy Check
         uses: datreeio/action-datree@main
         with:
-          path: 'cluster/CD.yaml'
+          path: 'deploy/cluster/argoCD.yaml'
           cliArguments: '--only-k8s-files -p Argo'
 
   HelmPolicyCheck:
@@ -45,4 +45,3 @@ jobs:
         with:
           path: 'cluster/pdf-editor-kustomize/dev/'
           isKustomization: true
-          
