--- a/.github/workflows/argoCD.yaml
+++ b/.github/workflows/argoCD.yaml
@@ -31,17 +31,23 @@ jobs:
       - name: Run Datree Policy Check
         uses: datreeio/action-datree@main
         with:
-          path: 'cluster/pdf-editor-helm/'
+          path: 'deploy/cluster/pdf-editor-helm'
           cliArguments: ''
           isHelmChart: true
-          helmArguments: '--values cluster/pdf-editor-helm/values.yaml'
+          helmArguments: '--values deploy/cluster/pdf-editor-helm/values.yaml'
+
   KcustomizePolicyCheck:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Run Datree Policy Check
+      - name: Datree Policy Check on backend
         uses: datreeio/action-datree@main
         with:
-          path: 'cluster/pdf-editor-kustomize/dev/'
+          path: 'deploy/cluster/backend'
+          isKustomization: true
+      - name: Datree Policy Check on frontend
+        uses: datreeio/action-datree@main
+        with:
+          path: 'deploy/cluster/frontend'
           isKustomization: true
