--- a/deploy/cluster/frontend/svc.yml
+++ b/deploy/cluster/frontend/svc.yml
@@ -6,8 +6,32 @@ metadata:
 spec:
   selector:
     app: frontend-pdf
-  type: NodePort
+  type: ClusterIP
   ports:
   - port: 80
     targetPort: web-port
     protocol: TCP
+
+---
+
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: pdf-editor-ig
+  labels:
+    name: pdf-editor-ig
+  annotations:
+    kubernetes.io/ingress.class: nginx
+  namespace: pdf-editor-ns
+spec:
+  rules:
+  - host: pdf-editor
+    http:
+      paths:
+      - pathType: Prefix
+        path: "/"
+        backend:
+          service:
+            name: frontend-lb
+            port:
+              number: 80
