--- a/deploy/cluster/pdf-editor-helm/Chart.yaml
+++ b/deploy/cluster/pdf-editor-helm/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: pdf-editor-helm
-description: A Helm chart for Kubernetes
+description: A Helm chart for pdf-editor
 
 # A chart can be either an 'application' or a 'library' chart.
 #
@@ -15,14 +15,14 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.5.0
+version: 0.7.0
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
-appVersion: "1.16.0"
+appVersion: "0.7"
 
 maintainers:
   - name: Dipankar Das
-    email: dipsonu10@hotmail.com
+    email: dipankardas0115@gmail.com
