--- a/deploy/cluster/pdf-editor-helm/templates/service.yaml
+++ b/deploy/cluster/pdf-editor-helm/templates/service.yaml
@@ -1,12 +1,52 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: expose-frontend
-  namespace: {{ .Values.namespace.dev }}
+  name: backend
+  namespace: {{ .Values.namespace }}
 spec:
   type: {{ .Values.service.type }}
   ports:
-    - port: {{ .Values.service.port }}
-      targetPort: {{ .Values.portContainer }}
+    - port: 8080
+      targetPort: 8080
   selector:
     web: pdf-editor
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: frontend-lb
+  namespace: pdf-editor-ns
+spec:
+  selector:
+    app: frontend-pdf
+  type: ClusterIP
+  ports:
+  - port: 80
+    targetPort: web-port
+    protocol: TCP
+
+---
+
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: pdf-editor-ig
+  labels:
+    name: pdf-editor-ig
+  annotations:
+    kubernetes.io/ingress.class: nginx
+  namespace: pdf-editor-ns
+spec:
+  rules:
+  - host: pdf-editor
+    http:
+      paths:
+      - pathType: Prefix
+        path: "/"
+        backend:
+          service:
+            name: frontend-lb
+            port:
+              number: 80
