--- a/deploy/cluster/pdf-editor-helm/values.yaml
+++ b/deploy/cluster/pdf-editor-helm/values.yaml
@@ -3,18 +3,12 @@
 # Declare variables to be passed into your templates.
 
 replicaCount:
-  dev: 2
-  prod: 5
+  backend: 2
+  frontend: 4
 
-namespace:
-  dev: pdf
-  prod: pdf-editor
-
-portContainer: 5680
-
+namespace: pdf-editor-ns
 
 image:
-  repository: dipugodocker/pdf-editor:latest@sha256:98dcd4e0f9a1f8e52037d8c482053482a4a3d66a5c665358aebc8b4589fcbda1
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
 
@@ -36,24 +30,24 @@ podAnnotations: {}
 podSecurityContext: {}
   # fsGroup: 2000
 
-securityContext: {}
+securityContext:
   # capabilities:
   #   drop:
   #   - ALL
-  # readOnlyRootFilesystem: true
+  readOnlyRootFilesystem: true
   # runAsNonRoot: true
   # runAsUser: 1000
 
 service:
-  type: NodePort
+  type: ClusterIP
   port: 10000
 
-# ingress:
-#   enabled: false
-#   className: ""
-#   annotations: {}
-#     # kubernetes.io/ingress.class: nginx
-#     # kubernetes.io/tls-acme: "true"
+ingress:
+  enabled: true
+  # className: ""
+  annotations:
+    kubernetes.io/ingress.class: nginx
+    # kubernetes.io/tls-acme: "true"
 #   hosts:
 #     - host: chart-example.local
 #       paths:
