--- a/.github/workflows/CI-PR.yaml
+++ b/.github/workflows/CI-PR.yaml
@@ -5,10 +5,10 @@ on:
     branches: [ main ]
 jobs:
   golang_build:
-      
+
     runs-on: ubuntu-latest
     environment: testing
-    
+
     steps:
     - uses: actions/checkout@v3
 
@@ -19,12 +19,12 @@ jobs:
 
     - name: Build
       run: |
-        cd backEnd/
+        cd src/backend
         go build -v ./...
 
     - name: Test
       run: |
-        cd backEnd/
+        cd src/backend
         go test -v ./...
 
   docker_build:
@@ -38,46 +38,47 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run: |
-        cd backEnd/
-        port=8080
+        cd src/backend
+        docker build . --file Dockerfile --tag pdf-editor:$(date +%s)
+        cd ../frontend
         docker build . --file Dockerfile --tag pdf-editor:$(date +%s)
 
-  heroku-preview:
-    needs: [docker_build]
-    runs-on: ubuntu-latest
-    environment: preview
-    steps:
-    - uses: actions/checkout@v1
-    - name: Login to Heroku Container registry
-      env: 
-        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-      run: heroku container:login 
-    - name: Build and push
-      env:
-        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-      run: |
-        cd backEnd/ 
-        heroku container:push -a ${{ secrets.HEROKU_APP_NAME_PR }} web 
-    - name: Release
-      env:
-        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-      run: |
-        cd backEnd/
-        heroku container:release -a ${{ secrets.HEROKU_APP_NAME_PR }} web 
+  # heroku-preview:
+  #   needs: [docker_build]
+  #   runs-on: ubuntu-latest
+  #   environment: preview
+  #   steps:
+  #   - uses: actions/checkout@v1
+  #   - name: Login to Heroku Container registry
+  #     env:
+  #       HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+  #     run: heroku container:login
+  #   - name: Build and push
+  #     env:
+  #       HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+  #     run: |
+  #       cd backEnd/
+  #       heroku container:push -a ${{ secrets.HEROKU_APP_NAME_PR }} web
+  #   - name: Release
+  #     env:
+  #       HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+  #     run: |
+  #       cd backEnd/
+  #       heroku container:release -a ${{ secrets.HEROKU_APP_NAME_PR }} web
 
-  preview:
-    needs: [heroku-preview, docker_build, golang_build]
-    runs-on: ubuntu-latest
-    steps:
-    - name: Comment Checkout
-      uses: NejcZdovc/comment-pr@v1
-      with:
-        message: |
-          # Preview for the App
-          📱🚀🥳
-          Provider | Status | Link
-          -|-|-
-          ![Heroku](https://img.shields.io/badge/heroku-%23430098.svg?style=for-the-badge&logo=heroku&logoColor=white) | ✅ | https://pdf-web.herokuapp.com/
-      env:
-        GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+  # preview:
+  #   needs: [heroku-preview, docker_build, golang_build]
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - name: Comment Checkout
+  #     uses: NejcZdovc/comment-pr@v1
+  #     with:
+  #       message: |
+  #         # Preview for the App
+  #         📱🚀🥳
+  #         Provider | Status | Link
+  #         -|-|-
+  #         ![Heroku](https://img.shields.io/badge/heroku-%23430098.svg?style=for-the-badge&logo=heroku&logoColor=white) | ✅ | https://pdf-web.herokuapp.com/
+  #     env:
+  #       GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
