--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -6,10 +6,10 @@ on:
 
 jobs:
   golang_build:
-      
+
     runs-on: ubuntu-latest
     environment: testing
-    
+
     steps:
     - uses: actions/checkout@v3
 
@@ -20,12 +20,12 @@ jobs:
 
     - name: Build
       run: |
-        cd backEnd/
+        cd src/backend
         go build -v ./...
 
     - name: Test
       run: |
-        cd backEnd/
+        cd src/backend
         go test -v ./...
 
   docker_build:
@@ -39,12 +39,13 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run: |
-        cd backEnd/
-        port=8080
+        cd src/backend
+        docker build . --file Dockerfile --tag pdf-editor:$(date +%s)
+        cd ../frontend
         docker build . --file Dockerfile --tag pdf-editor:$(date +%s)
 
   docker_new_release:
-    
+
     needs: [docker_build]
 
     runs-on: ubuntu-latest
@@ -55,33 +56,34 @@ jobs:
     - uses: actions/checkout@v3
     - name: Publish the Docker image
       run: |
-        cd backEnd/
         docker login -u dipugodocker -p "$SUPER_SECRET"
-        docker build . --file Dockerfile --tag dipugodocker/pdf-editor:0.6-rc
-        docker build . --file Dockerfile --tag dipugodocker/pdf-editor:latest
-        docker push dipugodocker/pdf-editor:0.6-rc
-        docker push dipugodocker/pdf-editor:latest
+        cd src/backend
+        docker build . --file Dockerfile --target prod --tag dipugodocker/pdf-editor:backend
+        cd ../frontend
+        docker build . --file Dockerfile --target prod --tag dipugodocker/pdf-editor:frontend
+        docker push dipugodocker/pdf-editor:backend
+        docker push dipugodocker/pdf-editor:frontend
 # docker build . --file Dockerfile --tag dipugodocker/pdf-editor:0.$(($(date +%m) + 1))-rc
 # docker push dipugodocker/pdf-editor:0.$(($(date +%m) + 1))-rc
-  heroku-preview:
-    needs: [docker_build]
-    runs-on: ubuntu-latest
-    environment: preview
-    steps:
-    - uses: actions/checkout@v1
-    - name: Login to Heroku Container registry
-      env: 
-        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-      run: heroku container:login 
-    - name: Build and push
-      env:
-        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-      run: |
-        cd backEnd/ 
-        heroku container:push -a ${{ secrets.HEROKU_APP_NAME }} web 
-    - name: Release
-      env:
-        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-      run: |
-        cd backEnd/
-        heroku container:release -a ${{ secrets.HEROKU_APP_NAME }} web 
+  # heroku-preview:
+  #   needs: [docker_build]
+  #   runs-on: ubuntu-latest
+  #   environment: preview
+  #   steps:
+  #   - uses: actions/checkout@v1
+  #   - name: Login to Heroku Container registry
+  #     env:
+  #       HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+  #     run: heroku container:login
+  #   - name: Build and push
+  #     env:
+  #       HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+  #     run: |
+  #       cd backEnd/
+  #       heroku container:push -a ${{ secrets.HEROKU_APP_NAME }} web
+  #   - name: Release
+  #     env:
+  #       HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+  #     run: |
+  #       cd backEnd/
+  #       heroku container:release -a ${{ secrets.HEROKU_APP_NAME }} web
