--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,16 @@
 version: 2.1
 jobs:
   build:
-    docker:
-      - image: alpine:3.15
+    machine:
+      image: ubuntu-2004:current
+    resource_class: medium
     steps:
       - run:
-          name: The First Step
+          name: Simple debug
           command: |
             echo 'Hello World!'
             echo 'This is the delivery pipeline'
+      - run:
+          name: check go version
+          command: |
+            go version
