Added more configs in cicleci(2/3)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,9 +8,10 @@ jobs:
       - run:
           name: Simple debug
           command: |
-            echo 'Hello World!'
-            echo 'This is the delivery pipeline'
+            echo 'testing go'
       - run:
           name: check go version
           command: |
             go version
+            ls -la
+            
