--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     networks:
       - pdf-editor
     volumes:
-      - db_data:/app/
+      - db_data:/go/src
 
   frontend:
     depends_on:
