--- a/.github/workflows/CI-PR.yaml
+++ b/.github/workflows/CI-PR.yaml
@@ -50,6 +50,8 @@ jobs:
 
     name: Install Cosign and test presence in path
     steps:
+      - uses: actions/checkout@v3
+
       - name: Install Cosign
         uses: sigstore/cosign-installer@main
         # with:
