--- a/.github/workflows/CI-PR.yaml
+++ b/.github/workflows/CI-PR.yaml
@@ -63,16 +63,27 @@ jobs:
           cosign version
           docker login -u dipugodocker -p "$SUPER_SECRET"
 
-      - name: build
+      - name: build backend
         run: |
           cd src/backend
           docker build --target prod -t docker.io/dipugodocker/pdf-editor:backend .
 
+      - name: build frontend
+        run: |
+          cd src/frontend
+          docker build --target prod -t docker.io/dipugodocker/pdf-editor:frontend .
+
       - name: sign
-        run: echo -n "${{secrets.COSIGNPASSWORD}}" | cosign sign --key cosign.key -a git_sha=$GITHUB_SHA docker.io/dipugodocker/pdf-editor:backend
+        run: |
+          echo -n "${{secrets.COSIGNPASSWORD}}" | cosign sign --key cosign.key -a git_sha=$GITHUB_SHA docker.io/dipugodocker/pdf-editor:frontend
+          echo -n "${{secrets.COSIGNPASSWORD}}" | cosign sign --key cosign.key -a git_sha=$GITHUB_SHA docker.io/dipugodocker/pdf-editor:backend
 
       - name: verify
-        run: cosign verify --key cosign.pub -a git_sha=$GITHUB_SHA docker.io/dipugodocker/pdf-editor:backend
+        run: |
+          echo "Frontend Verify"
+          cosign verify --key cosign.pub -a git_sha=$GITHUB_SHA docker.io/dipugodocker/pdf-editor:frontend | jq .
+          echo "Backend Verify"
+          cosign verify --key cosign.pub -a git_sha=$GITHUB_SHA docker.io/dipugodocker/pdf-editor:backend | jq .
   # heroku-preview:
   #   needs: [docker_build]
   #   runs-on: ubuntu-latest
