Added push to the github action

--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -44,25 +44,71 @@ jobs:
         cd ../frontend
         docker build . --file Dockerfile --tag pdf-editor:$(date +%s)
 
-  docker_new_release:
+  # docker_new_release:
 
+  #   needs: [docker_build]
+
+  #   runs-on: ubuntu-latest
+  #   environment: preview
+  #   env:
+  #     SUPER_SECRET: ${{ secrets.DOCKER_PASS }}
+  #   steps:
+  #   - uses: actions/checkout@v3
+  #   - name: Publish the Docker image
+  #     run: |
+  #       docker login -u dipugodocker -p "$SUPER_SECRET"
+  #       cd src/backend
+  #       docker build . --file Dockerfile --target prod --tag dipugodocker/pdf-editor:backend
+  #       cd ../frontend
+  #       docker build . --file Dockerfile --target prod --tag dipugodocker/pdf-editor:frontend
+
+  test_cosign_action:
     needs: [docker_build]
 
     runs-on: ubuntu-latest
     environment: preview
+
     env:
       SUPER_SECRET: ${{ secrets.DOCKER_PASS }}
+
+    name: Install Cosign and test presence in path
     steps:
-    - uses: actions/checkout@v3
-    - name: Publish the Docker image
-      run: |
-        docker login -u dipugodocker -p "$SUPER_SECRET"
-        cd src/backend
-        docker build . --file Dockerfile --target prod --tag dipugodocker/pdf-editor:backend
-        cd ../frontend
-        docker build . --file Dockerfile --target prod --tag dipugodocker/pdf-editor:frontend
-        docker push dipugodocker/pdf-editor:backend
-        docker push dipugodocker/pdf-editor:frontend
+      - uses: actions/checkout@v3
+
+
+      - name: Install Cosign
+        uses: sigstore/cosign-installer@main
+        # with:
+        #   cosign-release: main
+      - name: Check Version
+        run: |
+          cosign version
+          docker login -u dipugodocker -p "$SUPER_SECRET"
+
+      - name: build backend
+        run: |
+          cd src/backend
+          docker build --target prod -t docker.io/dipugodocker/pdf-editor:backend .
+
+      - name: build frontend
+        run: |
+          cd src/frontend
+          docker build --target prod -t docker.io/dipugodocker/pdf-editor:frontend .
+
+      - name: sign
+        run: |
+          echo -n "${{secrets.COSIGNPASSWORD}}" | cosign sign --key cosign.key -a git_sha=$GITHUB_SHA docker.io/dipugodocker/pdf-editor:frontend
+          echo -n "${{secrets.COSIGNPASSWORD}}" | cosign sign --key cosign.key -a git_sha=$GITHUB_SHA docker.io/dipugodocker/pdf-editor:backend
+
+      - name: verify
+        run: |
+          echo "Frontend Verify"
+          cosign verify --key cosign.pub -a git_sha=$GITHUB_SHA docker.io/dipugodocker/pdf-editor:frontend | jq .
+          echo "Backend Verify"
+          cosign verify --key cosign.pub -a git_sha=$GITHUB_SHA docker.io/dipugodocker/pdf-editor:backend | jq .
+          docker push docker.io/dipugodocker/pdf-editor:backend
+          docker push docker.io/dipugodocker/pdf-editor:frontend
+
 # docker build . --file Dockerfile --tag dipugodocker/pdf-editor:0.$(($(date +%m) + 1))-rc
 # docker push dipugodocker/pdf-editor:0.$(($(date +%m) + 1))-rc
   # heroku-preview:
