--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -4,7 +4,7 @@
   "description": "pdf-editor frontend",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --runInBand --forceExit",
     "start": "node server.js"
   },
   "author": "Dipankar Das",
@@ -12,9 +12,12 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "child_process": "^1.0.2",
+    "cross-env": "^7.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "jest": "^28.1.3",
     "multer": "^1.4.5-lts.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "supertest": "^6.2.4"
   }
 }
