--- a/deploy/tekton-ci/task-back.yml
+++ b/deploy/tekton-ci/task-back.yml
@@ -8,9 +8,8 @@ spec:
       image: golang:1.18
       script: |
         #!/bin/sh
-        apk add qpdf git
-        cd /home
-        git clone https://github.com/dipankardas011/PDF-Editor.git
+        apt install qpdf git
+        git clone https://github.com/dipankardas011/PDF-Editor.git -b tekton
         cd PDF-Editor/src/backend
         echo "Building.."
         go build -v .
