--- a/deploy/tekton-ci/task-back.yml
+++ b/deploy/tekton-ci/task-back.yml
@@ -9,7 +9,7 @@ spec:
       script: |
         #!/bin/sh
         apt install qpdf git
-        git clone https://github.com/dipankardas011/PDF-Editor.git -b tekton
+        git clone https://github.com/dipankardas011/PDF-Editor.git -b main
         cd PDF-Editor/src/backend
         echo "Building.."
         go build -v .
