--- a/deploy/tekton-ci/task-front.yml
+++ b/deploy/tekton-ci/task-front.yml
@@ -10,7 +10,7 @@ spec:
         #!/bin/sh
         cd /home
         apk add curl git
-        git clone https://github.com/dipankardas011/PDF-Editor.git -b tekton
+        git clone https://github.com/dipankardas011/PDF-Editor.git -b main
         cd PDF-Editor/src/frontend
         npm install
         echo "Testing.."
