Correction in github actions Fixed to  in CI-PR Githubact

--- a/.github/workflows/CI-PR.yaml
+++ b/.github/workflows/CI-PR.yaml
@@ -46,7 +46,7 @@ jobs:
     - name: testing
       run: |
         cd src/frontend
-        node run test
+        npm run test
 
   docker_build:
 
