Added sudo to escalate privileges

--- a/.github/workflows/CI-PR.yaml
+++ b/.github/workflows/CI-PR.yaml
@@ -46,7 +46,7 @@ jobs:
     - name: testing
       run: |
         cd src/frontend
-        npm run test
+        sudo npm run test
 
   docker_build:
 
