--- a/.github/workflows/CI-PR.yaml
+++ b/.github/workflows/CI-PR.yaml
@@ -44,9 +44,11 @@ jobs:
         npm install
 
     - name: testing
+      env:
+        PORT: 8080
       run: |
         cd src/frontend
-        sudo npm run test
+        npm run test
 
   docker_build:
 
