--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,5 +32,5 @@ jobs:
       - run:
           name: Testing frontend
           command: |
-            cd /src/frontend
+            cd src/frontend
             npm run test
