--- a/deploy/cluster/monitoring/grafana-deply.yml
+++ b/deploy/cluster/monitoring/grafana-deply.yml
@@ -9,8 +9,7 @@ data:
     admin_user = $__file{/etc/config/secrets/username}
     admin_password = $__file{/etc/config/secrets/password}
     [dashboards]
-    default_home_dashboard_path = "/var/lib/grafana/dashboards/pdf-backend.json"
-
+    default_home_dashboard_path = "/var/lib/grafana/dashboards/pdf/pdf.json"
 ---
 
 apiVersion: v1
@@ -68,17 +67,15 @@ spec:
           - name: grafana-dashboard-provider
             mountPath: /etc/grafana/provisioning/dashboards/dashboardProvider.yaml
             subPath: dashboardProvider.yaml
-          - name: dashboards-imdb
-            mountPath: /var/lib/grafana/dashboards/imdb
-          - name: dashboards-dotnet
-            mountPath: /var/lib/grafana/dashboards/dotnet
+          - name: dashboards-pdf
+            mountPath: /var/lib/grafana/dashboards/pdf
+
       volumes:
         - name: grafana-secrets
           secret:
             secretName: grafana-secrets
         - name: grafana-storage
-          hostPath:
-            path: /grafana
+          emptyDir: {}
         - name: grafana-datasources
           configMap:
               defaultMode: 420
@@ -89,12 +86,55 @@ spec:
         - name: grafana-dashboard-provider
           configMap:
             name: grafana-dashboard-provider
-        - name: dashboards-imdb
+        - name: dashboards-pdf
           configMap:
-            name: grafana-dashboards-imdb
-        - name: dashboards-dotnet
-          configMap:
-            name: grafana-dashboards-dotnet
+            name: dashboards-pdf
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: grafana-dashboard-provider
+  namespace: monitoring
+  labels:
+    app: grafana
+data:
+  dashboardProvider.yaml: |
+    apiVersion: 1
+    providers:
+    - name: "PDF-Editor"
+      options:
+        path: /var/lib/grafana/dashboards/pdf
+      orgId: 1
+      type: file
+      disableDeletion: false
+
+
+
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: grafana-datasources
+  namespace: monitoring
+data:
+  prometheus.yaml: |-
+    {
+        "apiVersion": 1,
+        "datasources": [
+            {
+               "access":"proxy",
+                "editable": true,
+                "name": "prometheus",
+                "orgId": 1,
+                "type": "prometheus",
+                "url": "http://prometheus-server.monitoring.svc:9090",
+                "version": 1,
+                "basicAuth": "true",
+                "basicAuthUser": "admin",
+                "basicAuthPassword": "1234"
+            }
+        ]
+    }
 
 ---
 
@@ -104,12 +144,163 @@ metadata:
   name: grafana
   namespace: monitoring
   annotations:
-      prometheus.io/scrape: 'true'
-      prometheus.io/port:   '3000'
+    prometheus.io/scrape: 'true'
+    prometheus.io/port:   '9090'
 spec:
   selector:
     app: grafana
-  type: LoadBalancer
+  type: ClusterIP
   ports:
     - port: 3000
       targetPort: 3000
+
+---
+
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: dashboards-pdf
+  namespace: monitoring
+  labels:
+    app: grafana
+data:
+  pdf.json: |-
+    {
+      "annotations": {
+        "list": [
+          {
+            "builtIn": 1,
+            "datasource": "-- Grafana --",
+            "enable": true,
+            "hide": true,
+            "iconColor": "rgba(0, 211, 255, 1)",
+            "name": "Annotations & Alerts",
+            "target": {
+              "limit": 100,
+              "matchAny": false,
+              "tags": [],
+              "type": "dashboard"
+            },
+            "type": "dashboard"
+          }
+        ]
+      },
+      "editable": true,
+      "gnetId": null,
+      "graphTooltip": 0,
+      "id": 1,
+      "links": [],
+      "panels": [
+        {
+          "datasource": "prometheus",
+          "fieldConfig": {
+            "defaults": {
+              "color": {
+                "mode": "thresholds"
+              },
+              "mappings": [],
+              "thresholds": {
+                "mode": "absolute",
+                "steps": [
+                  {
+                    "color": "green",
+                    "value": null
+                  }
+                ]
+              }
+            },
+            "overrides": [
+              {
+                "matcher": {
+                  "id": "byName",
+                  "options": "go_request_operations_success_total{instance=\"backend.pdf-editor-ns.svc.cluster.local:8080\", job=\"pdf-editor\"}"
+                },
+                "properties": [
+                  {
+                    "id": "displayName",
+                    "value": "200 Status backend"
+                  }
+                ]
+              },
+              {
+                "matcher": {
+                  "id": "byName",
+                  "options": "go_request_operations_error_total{instance=\"backend.pdf-editor-ns.svc.cluster.local:8080\", job=\"pdf-editor\"}"
+                },
+                "properties": [
+                  {
+                    "id": "displayName",
+                    "value": "500 Status Backend"
+                  },
+                  {
+                    "id": "color",
+                    "value": {
+                      "fixedColor": "red",
+                      "mode": "fixed"
+                    }
+                  }
+                ]
+              }
+            ]
+          },
+          "gridPos": {
+            "h": 8,
+            "w": 12,
+            "x": 0,
+            "y": 0
+          },
+          "id": 2,
+          "options": {
+            "colorMode": "value",
+            "graphMode": "area",
+            "justifyMode": "auto",
+            "orientation": "auto",
+            "reduceOptions": {
+              "calcs": [
+                "lastNotNull"
+              ],
+              "fields": "",
+              "values": false
+            },
+            "text": {},
+            "textMode": "auto"
+          },
+          "pluginVersion": "8.1.1",
+          "targets": [
+            {
+              "exemplar": true,
+              "expr": "go_request_operations_success_total",
+              "interval": "",
+              "legendFormat": "",
+              "queryType": "randomWalk",
+              "refId": "A"
+            },
+            {
+              "exemplar": true,
+              "expr": "go_request_operations_error_total",
+              "hide": false,
+              "interval": "",
+              "legendFormat": "",
+              "refId": "B"
+            }
+          ],
+          "title": "HTTP Status Codes",
+          "type": "stat"
+        }
+      ],
+      "schemaVersion": 30,
+      "style": "dark",
+      "tags": [],
+      "templating": {
+        "list": []
+      },
+      "time": {
+        "from": "now-6h",
+        "to": "now"
+      },
+      "timepicker": {},
+      "timezone": "",
+      "title": "PDF-Editor",
+      "uid": "BFcum-R4z",
+      "version": 2
+    }
