Ansible script in terraform

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -93,6 +93,10 @@ jobs:
         cd deploy/IAC/ansible-terraform
         terraform plan -input=false
 
+    - name: Install Ansible
+      run: |
+        sudo apt install ansible -y
+        ansible --version
       # On push to "main", build or change infrastructure according to Terraform configuration files
       # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
     - name: Terraform Apply
