--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -99,9 +99,9 @@ jobs:
         ansible --version
       # On push to "main", build or change infrastructure according to Terraform configuration files
       # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
-    - name: Terraform Apply
-      if: github.ref == 'refs/heads/"main"' && github.event_name == 'push'
-      run: |
-        cd deploy/IAC/ansible-terraform
-        terraform apply -auto-approve -input=false
+      #    - name: Terraform Apply
+      #      if: github.ref == 'refs/heads/"main"' && github.event_name == 'push'
+      #run: |
+      #  cd deploy/IAC/ansible-terraform
+      #  terraform apply -auto-approve -input=false
 ...
