--- a/deploy/cluster/okteto/deploy-pdf-frontend.yml
+++ b/deploy/cluster/okteto/deploy-pdf-frontend.yml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: pdf-editor-frontend
-        image: docker.io/dipugodocker/pdf-editor:0.8-frontend
+        image: docker.io/dipugodocker/pdf-editor:frontend
         resources:
           requests:
               memory: "50Mi"
