--- a/deploy/cluster/okteto/deploy-pdf.yml
+++ b/deploy/cluster/okteto/deploy-pdf.yml
@@ -17,7 +17,7 @@ spec:
     spec:
       initContainers:
         - name: pdf-files
-          image: docker.io/dipugodocker/pdf-editor:0.8-backend
+          image: docker.io/dipugodocker/pdf-editor:backend
           volumeMounts:
           - name: backend
             mountPath: /mnt
@@ -25,7 +25,7 @@ spec:
 
       containers:
         - name: pdf-editor
-          image: docker.io/dipugodocker/pdf-editor:0.8-backend
+          image: docker.io/dipugodocker/pdf-editor:backend
           volumeMounts:
           - name: backend
             mountPath: /go/src/
