Added the metics server file and fixed the docker-compose
Signed-off-by: Dipankar Das <dipsonu10@hotmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       - "80:80"
     networks:
       - pdf-editor
-  jaeger.tracing:
+  trace:
     depends_on:
       - backend
       - frontend
